--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -2,6 +2,7 @@
 id: "waydines"
 title: "Waydines"
 banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg"
+short_description: "Country in Elysium"
 ---
 
 **Waydines**, officially the **Parliamentary Republic of Waydines**, is an [elysian](Elysium) and a 
