--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -2,6 +2,7 @@
 id: "waydines"
 title: "Waydines"
 banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg"
+short_description: "País em Elísia"
 ---
 
 **Waydines**, oficialmente a **República Parlamentarista de Waydines**, é um país [elisiano](Elísia)
