IPA of 'Waydines'

--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -5,8 +5,8 @@ banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_
 short_description: "País em Elísia"
 ---
 
-**Waydines**, oficialmente a **República Parlamentarista de Waydines**, é um país [elisiano](Elísia)
-e [brazilburguês](Brazilburg) (fazendo-a nação prima de [Frigustell](Frigustell)). Composta de dois 
-distritos, sendo esses sua capital planejada [Mitterfurt](Mitterfurt) e a cidade de [Gremont](Gremont), 
-possui no total 13 cidadãos registrados oficialmente (2024). Adicionalmente, Waydines é país-membro e
-fundador da [União Elisiana](União%20Elisiana).
+**Waydines** (/we&#618;da&#618;nɛs/), oficialmente a **República Parlamentarista de Waydines**, é um
+país [elisiano](Elísia) e [brazilburguês](Brazilburg) (fazendo-a nação prima de [Frigustell](Frigustell)). 
+Composta de dois distritos, sendo esses sua capital planejada [Mitterfurt](Mitterfurt) e a cidade de 
+[Gremont](Gremont), possui no total 13 cidadãos registrados oficialmente (2024). Adicionalmente, 
+Waydines é país-membro e fundador da [União Elisiana](União%20Elisiana).
