--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -5,8 +5,8 @@ banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_
 short_description: "Country in Elysium"
 ---
 
-**Waydines**, officially the **Parliamentary Republic of Waydines**, is an [elysian](Elysium) and a 
-[brazilbourgish](Brazilburg) country (which makes it a cousin-nation of [Frigustell](Frigustell)). 
-Composed of two districts, being these its planned capital [Mitterfurt](Mitterfurt) and the city of 
-[Gremont](Gremont), has the total of 13 officially registered citizens (2024). Adittionally, Waydines 
-is a member and founder state of the [Elysian Union](Elysian%20Union).
+**Waydines** (/we&#618;da&#618;nɛs/), officially the **Parliamentary Republic of Waydines**, is an 
+[elysian](Elysium) and a [brazilbourgish](Brazilburg) country (which makes it a cousin-nation of 
+[Frigustell](Frigustell)). Composed of two districts, being these its planned capital [Mitterfurt](Mitterfurt) 
+and the city of [Gremont](Gremont), it has a total of 13 officially registered citizens (2024). 
+Adittionally, Waydines is a member and founder state of the [Elysian Union](Elysian%20Union).
