Waydines Quick Facts

--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -11,6 +11,30 @@ Composta de dois distritos, sendo esses sua capital planejada [Mitterfurt](Mitte
 [Gremont](Gremont), possui no total 13 cidadãos registrados oficialmente (2024). Adicionalmente, 
 Waydines é país-membro e fundador da [União Elisiana](União%20Elisiana).
 
+<QuickFacts title="República Parlamentarista de Waydines">
+    <CountrySymbols 
+        flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg"
+        coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"
+    />
+
+    <InfoLabel label="Capital" info="[Mitterfurt](Mitterfurt)" />
+    <InfoLabel label="Línguas Oficiais" info="Inglês, português" />
+
+    <InfoLabel label="Governo" info="República Parlamentarista Unitária" />
+    <InfoLabel label="Primeiro-Ministro" info="Cupertino Kurt" small />
+    <InfoLabel label="Legislatura" info="[Parlamento de Waydines](Parlamento de Waydines)" />
+
+    <InfoLabel label="Formação" info="" />
+    <InfoLabel label="Criação de Brazilburg" info="2 de janeiro de 2021" small />
+    <InfoLabel label="Declaração de Independência" info="6 de janeiro de 2021" small />
+    <InfoLabel label="Proclamação da República" info="Desconhecido" small />
+    <InfoLabel label="Terceira República" info="20 de outubro de 2022" small />
+
+    <InfoLabel label="População" info="13 cidadãos" />
+    <InfoLabel label="Moeda" info="Elísio (`ELS`)" />
+    <InfoLabel label="Website governamental" info="[waydines.vercel.app](https://waydines.vercel.app)" />
+</QuickFacts>
+
 # Etimologia
 teste
 
