Fix Waydines' Quick Facts

--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -31,7 +31,7 @@ Waydines é país-membro e fundador da [União Elisiana](União%20Elisiana).
     <InfoLabel label="Terceira República" info="20 de outubro de 2022" small />
 
     <InfoLabel label="População" info="13 cidadãos" />
-    <InfoLabel label="Moeda" info="Elísio (`ELS`)" />
+    <InfoLabel label="Moeda" info="Elísio (``ELS``)" />
     <InfoLabel label="Website governamental" info="[waydines.vercel.app](https://waydines.vercel.app)" />
 </QuickFacts>
 
