--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -15,7 +15,7 @@ Waydines é país-membro e fundador da [União Elisiana](União%20Elisiana).
     <CountrySymbols 
         flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg"
         coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"
-    />
+    ></CountrySymbols>
 
     <InfoLabel label="Capital" info="[Mitterfurt](Mitterfurt)" />
     <InfoLabel label="Línguas Oficiais" info="Inglês, português" />
