More about Waydines

--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -10,3 +10,78 @@ short_description: "Country in Elysium"
 [Frigustell](Frigustell)). Composed of two districts, being these its planned capital [Mitterfurt](Mitterfurt) 
 and the city of [Gremont](Gremont), it has a total of 13 officially registered citizens (2024). 
 Adittionally, Waydines is a member and founder state of the [Elysian Union](Elysian%20Union).
+
+<QuickFacts title="República Parlamentarista de Waydines">
+    <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
+    <tr>
+        <td>Capital</td>
+        <td>Mitterfurt</td>
+    </tr>
+    <tr>
+        <td>Official languages</td>
+        <td>English, portuguese</td>
+    </tr>
+    <tr>
+        <td>Denonym</td>
+        <td>Waydinean</td>
+    </tr>
+    <tr>
+        <td>Government</td>
+        <td>
+            <a href="https://en.wikipedia.org/wiki/Unitary_state">Unitary</a>
+            <a href="https://en.wikipedia.org/wiki/Parliamentary_republic">parliamentary republic</a>
+        </td>
+    </tr>
+    <tr class="small">
+        <td>Prime-Minister</td>
+        <td><a href="Cupertino%20Kurt">Cupertino Kurt</a></td>
+    </tr>
+    <tr>
+        <td>Legislature</td>
+        <td><a href="Parliament%20of%20Waydines">Parliament of Waydines</a></td>
+    </tr>
+    <tr>
+        <td>History</td>
+    </tr>
+    <tr class="small">
+        <td>Creation of Brazilburg</td>
+        <td>January 2nd, 2021</td>
+    </tr>
+    <tr class="small">
+        <td>Declaration of Independence</td>
+        <td>January 6th, 2021</td>
+    </tr>
+    <tr class="small">
+        <td>Proclamation of the Republic</td>
+        <td>Unknown</td>
+    </tr>
+    <tr class="small">
+        <td>Third Republic</td>
+        <td>October 20th, 2022</td>
+    </tr>
+    <tr>
+        <td>Population (2024)</td>
+        <td>13 citizens</td>
+    </tr>
+    <tr>
+        <td>Ethnicity</td>
+        <td><a href="Elysium">Elysian</a> and <a href="Brazilburg">Brazilbourgish</a></td>
+    </tr>
+    <tr>
+        <td>Religion (2023)</td>
+        <td>
+            <ul>
+                <li>94% <a href="Madeism">Madeism</a></li>
+                <li>6% no religion</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td>Currency</td>
+        <td><a href="Elisio">Elisio</a> (<code>ELS</code>)</td>
+    </tr>
+    <tr>
+        <td>Governmental <i>Website</i></td>
+        <td><a href="https://waydines.vercel.app/">waydines.vercel.app</a></td>
+    </tr>
+</QuickFacts>
