--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -6,40 +6,201 @@ short_description: "País em Elísia"
 ---
 
 **Waydines** (/we&#618;da&#618;nɛs/), oficialmente a **República Parlamentarista de Waydines**, é um
-país [elisiano](Elísia) e [brazilburguês](Brazilburg) (fazendo-o nação prima de [Frigustell](Frigustell)). 
-Composta de dois distritos, sendo esses sua capital planejada [Mitterfurt](Mitterfurt) e a cidade de 
-[Gremont](Gremont), possui no total 13 cidadãos registrados oficialmente (2024). Adicionalmente, 
-Waydines é país-membro e fundador da [União Elisiana](União%20Elisiana).
+país [elisiano](Elísia) e [brazilburguês](Brazilburg) (o que o faz nação prima de [Frigustell](Frigustell)). 
+Composta por dois distritos, a capital planejada [Mitterfurt](Mitterfurt) e a cidade de [Gremont](Gremont), 
+possui no total 13 cidadãos registrados oficialmente (2024). Adicionalmente, é um país-membro e fundador 
+da [União Elisiana](União%20Elisiana).
 
 <QuickFacts title="República Parlamentarista de Waydines">
-    <CountrySymbols 
-        flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg"
-        coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"
-    ></CountrySymbols>
-
-    <InfoLabel label="Capital" info="[Mitterfurt](Mitterfurt)" />
-    <InfoLabel label="Línguas Oficiais" info="Inglês, português" />
-
-    <InfoLabel label="Governo" info="República Parlamentarista Unitária" />
-    <InfoLabel label="Primeiro-Ministro" info="Cupertino Kurt" small />
-    <InfoLabel label="Legislatura" info="[Parlamento de Waydines](Parlamento de Waydines)" />
-
-    <InfoLabel label="Formação" info="" />
-    <InfoLabel label="Criação de Brazilburg" info="2 de janeiro de 2021" small />
-    <InfoLabel label="Declaração de Independência" info="6 de janeiro de 2021" small />
-    <InfoLabel label="Proclamação da República" info="Desconhecido" small />
-    <InfoLabel label="Terceira República" info="20 de outubro de 2022" small />
-
-    <InfoLabel label="População" info="13 cidadãos" />
-    <InfoLabel label="Moeda" info="Elísio (``ELS``)" />
-    <InfoLabel label="Website governamental" info="[waydines.vercel.app](https://waydines.vercel.app)" />
+    <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
+    <tr>
+        <td>Capital</td>
+        <td>Mitterfurt</td>
+    </tr>
+    <tr>
+        <td>Línguas oficiais</td>
+        <td>Inglês, português</td>
+    </tr>
+    <tr>
+        <td>Gentílico</td>
+        <td>Waydineense</td>
+    </tr>
+    <tr>
+        <td>Governo</td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/Rep%C3%BAblica_parlamentarista">República parlamentarista</a>
+            <a href="https://pt.wikipedia.org/wiki/Estado_unit%C3%A1rio">unitária</a>
+        </td>
+    </tr>
+    <tr class="small">
+        <td>Primeiro-Ministro</td>
+        <td><a href="Cupertino%20Kurt">Cupertino Kurt</a></td>
+    </tr>
+    <tr>
+        <td>Legislatura</td>
+        <td><a href="Parlamento%20de%20Waydines">Parlamento de Waydines</a></td>
+    </tr>
+    <tr>
+        <td>Formação</td>
+    </tr>
+    <tr class="small">
+        <td>Criação de Brazilburg</td>
+        <td>2 de janeiro de 2021</td>
+    </tr>
+    <tr class="small">
+        <td>Declaração de Independência</td>
+        <td>6 de janeiro de 2021</td>
+    </tr>
+    <tr class="small">
+        <td>Proclamação da República</td>
+        <td>Desconhecido</td>
+    </tr>
+    <tr class="small">
+        <td>Terceira República</td>
+        <td>20 de outubro de 2022</td>
+    </tr>
+    <tr>
+        <td>População (2024)</td>
+        <td>13 cidadãos</td>
+    </tr>
+    <tr>
+        <td>Etnia</td>
+        <td><a href="Elísia">Elisiana</a> e <a href="Brazilburg">Brazilburguesa</a></td>
+    </tr>
+    <tr>
+        <td>Religião (2023)</td>
+        <td>
+            <ul>
+                <li>83% <a href="Madeísmo">Madeísmo</a></li>
+                <li>17% sem religião</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td>Moeda</td>
+        <td><a href="Elísio">Elísio</a> (<code>ELS</code>)</td>
+    </tr>
+    <tr>
+        <td><i>Website</i> governamental</td>
+        <td><a href="https://waydines.vercel.app/">waydines.vercel.app</a></td>
+    </tr>
 </QuickFacts>
 
 # Etimologia
-teste
+O nome “Waydines” possui origem incerta. Foi escolhido logo após a guerra de independência, tendo 
+sido proposto por [Wolfi Hraje](Wolfi%20Hraje), que não faz mais parte da comunidade. O significado 
+original perdeu-se ao longo do tempo, entretanto, a hipótese mais provável é que derive do anglo-saxão,
+significando algo como “Povo de Grande Amor”. Em runas, seria representado como ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
 
 # História
-Teste
 
 ## Império de Waydines
-Teste
+
+Em 2 de janeiro de 2021, foi criado o Reino de Brazilburg, tendo como rei [Don Ravi](Don%20Ravi) e 
+como príncipe [Cupertino](Cupertino%20Kurt). Em poucos dias, Brazilburg subdividiu-se em duas regiões: 
+Brazilburg do Sul, uma colônia sob controle do príncipe, e Brazilburg do Norte, a metrópole.
+
+No entanto, em 4 de janeiro de 2021, quando os acampamentos da colônia ao sul começaram a se consolidar 
+em uma cidade, seus habitantes passaram a sentir que Brazilburg não acompanhava o desenvolvimento dos 
+demais países. A falta de recursos no tesouro nacional e a ausência de progresso no Nether reforçaram 
+essa percepção.
+
+Diante desse cenário, dois generais, Wolfi Hraje e [Jobje](Jobje), foram apontados para liderar um 
+movimento de revolta, encabeçado pelo príncipe Cupertino. Com apoio internacional, o conflito culminou 
+em uma guerra em 6 de janeiro de 2021. Para evitar a destruição de estruturas, a batalha foi travada
+em um coliseu com espectadores internacionais. O conflito foi encerrado quando o rei Don Ravi assinou 
+o reconhecimento da independência da colônia.
+
+Pouco tempo após a independência, Brazilburg integrou-se a Waydines como cidade sob o nome de "Fucking", 
+que posteriormente foi renomeada para Kamchatskiy a pedido de Cupertino.
+
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741822826/body_nhbnnc.png" description="Uniforme dos Revolucionários"/>
+
+Inicialmente, Waydines adotou um sistema [diárquico](https://pt.wikipedia.org/wiki/Diarquia), governado 
+por Wolfi e Cupertino. Entretanto, a estrutura rapidamente evoluiu para uma monarquia semi-constitucional, 
+com Cupertino como rei e Wolfi assumindo o cargo de primeiro-ministro sem a realização de eleições. 
+Esse sistema gerou tensões entre os dois líderes, pois Wolfi sentia que seu poder estava sendo reduzido.
+
+O conflito entre ambos atingiu seu auge durante um plebiscito para renomear a capital, então chamada 
+de [Grantsldenhill](Grantsldenhill). Duas propostas foram apresentadas: Mitterfürt, sugerido pelo rei, 
+e Fürstenbach, proposto pelo primeiro-ministro. A vitória de Mitterfürt no plebiscito, aliada à 
+crescente pressão interna, resultou na **Guerra dos Dois Nomes**. O conflito opôs brasileiros, favoráveis 
+a Mitterfürt, contra estrangeiros, amigos pessoais de Wolfi, que apoiavam Fürstenbach. A guerra 
+terminou com a vitória de Mitterfürt.
+
+O Império de Waydines chegou ao fim com a dissolução do [Fly SMP](Fly%20SMP), da qual o país fazia parte. 
+O encerramento do servidor ocorreu devido a denúncias de banimentos injustos por parte dos moderadores. 
+Curiosamente, ao final do período imperial, Kamchatskiy estava mais desenvolvida do que Mitterfürt, 
+contrastando com o motivo original da independência.
+
+## Primeira República
+
+A Primeira República foi um período de relativa estabilidade, com poucos eventos políticos significativos.
+O governo provisório pós-proclamação adotou um sistema [presidencialista](https://pt.wikipedia.org/wiki/Presidencialismo), 
+tendo Cupertino como presidente e Don Ravi como vice-presidente. Uma primeira eleição chegou a ser 
+planejada, mas nunca chegou a ser realizada. Ademais, neste período, Jobje e Wolfi saíram de Waydines
+e não participaram de nenhum outro servidor.
+
+O evento mais relevante dessa fase foi a guerra entre a Confederação de Crusoé, nome adotado por 
+Waydines durante o [EDG SMP](EDG%20SMP), e os [Faccistas](Faccismo) (não confundir com fascistas). 
+Durante o conflito, Cupertino explorou uma brecha de segurança no servidor para obter acesso de 
+operador, garantindo a vitória de Waydines.
+
+Este período se estendeu do final do Fly SMP até o [Delta SMP 3](Delta%20SMP%203).
+
+## Segunda República
+A Segunda República, também chamada de [Nova Waydines](Segunda%20República%20de%20Waydines), como ela
+se chamava oficialmente a partir das várias reformas políticas desenvolvidas por Cupertino e Don Ravi 
+que iniciaram este período. Waydines passou a ter um regime [semipresidencialista](https://pt.wikipedia.org/wiki/Semipresidencialismo) 
+(embora oficialmente se considerasse [parlamentarista](https://pt.wikipedia.org/wiki/Parlamentarismo))
+e sua primeira constituição, chamada de _Constssung_ e Mitterfürt passou a se chamar Mitterfurt. Esta 
+foi a época mais conturbada da história da nação, mas também quando houve uma explosão cultural e 
+identitária dentro da sociedade waydineense. 
+
+Pela primeira vez o país teve um sistema político realmente organizado, houve a criação do [Partido 
+Nacionalista de Waydines](Partido%20Nacionalista%20de%20Waydines), liderado por Cupertino e contando 
+com 5 filiados, e do [Partido Aceleracionista de Waydines](Partido%20Aceleracionista%20de%20Waydines), 
+de Don Ravi junto de 4 membros. Além das primeiras eleições da história, que fizeram Cupertino o
+primeiro-ministro e Ravi, presidente. Vale ressaltar que o sistema eleitoral da Segunda República era 
+extremamente incomum, o primeiro-ministro era eleito diretamente pelo povo, não pelo Parlamento, e os 
+assentos do Parlamento recebiam uma [eleição majoritária](https://pt.wikipedia.org/wiki/Sistema_majorit%C3%A1rio) 
+para cada.
+
+Mais adiante, houveram eleições para o Parlamento, com todos os assentos sendo entregues ao Partido 
+Nacionalista.
+
+Foi também neste tempo que a [igreja madeísta](Madeísmo) primitiva nasceu, devido a acontecimentos paralelos entre
+as pessoas que jogaram no EDG SMP. Devido a grande parte de Waydines ter forte relação com o EDG, a
+religião cresceu rapidamente entre as pessoas, alcançando até mesmo um pico de 100% da população.
+
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741825533/processo1pagina_owmol8.webp" height="20rem" description="Primeira Página do Processo Criminal contra 40hzRay"/>
+
+No início da Nova República, houve caos, um cidadão, [40hzRay](40hzRay), começou a causar danos à 
+nação e a seus habitantes repetidamente. Nesta situação, a assembleia constituinte correu para 
+promulgar a constituição e uma Suprema Corte foi formada, tendo [Shazy](Shazy) como ministro.
+
+Foi iniciado um julgamento extraordinário, levando em consideração ações feitas antes da constituição. 
+Ele fez ataques aos agora inexistentes distritos de Hasgard e Hillpath e subdistrito de Santuário. 
+Também machucou a integridade do distrito de Mitterfurt, foi notório principalmente pelos seguintes
+crimes: Sabotou a farm de endermans do servidor; Furtos e completa destruição do subdistrito de Santuário;
+Furtos a Hillpath; Assassinato de pessoas e animais de estimação; Invasão de propriedade privada e 
+propriedade estatal de acesso restrito; Furto do ovo do dragão.
+
+Os eventos, ocorridos durante o [Delta SMP 4](Delta%20SMP%204), terminaram com a prisão de 40hzRay por
+duas semanas, após um longo julgamento. Ironicamente, o servidor terminou antes de que o réu pudesse 
+ser propriamente preso.
+
+
+
+## Guerra Civil de Waydines
+
+## Governo Provisório
+Ao fim da Guerra Civil de Waydines, o país entrou em um estado provisório ausente de líderes políticos,
+sem brasão e com a bandeira tricolor também sem brasão, pela primeira vez, a qual o país mantém até hoje.
+Isso durou por cerca de uma semana, até que a Terceira República foi proclamada.
+
+## Terceira República (Dias de Hoje)
+
+# Política
+
+# Sociedade
