Finish 'History' section of Waydines' article

--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -128,10 +128,10 @@ crescente pressão interna, resultou na **Guerra dos Dois Nomes**. O conflito op
 a Mitterfürt, contra estrangeiros, amigos pessoais de Wolfi, que apoiavam Fürstenbach. A guerra 
 terminou com a vitória de Mitterfürt.
 
-O Império de Waydines chegou ao fim com a dissolução do [Fly SMP](Fly%20SMP), da qual o país fazia parte. 
-O encerramento do servidor ocorreu devido a denúncias de banimentos injustos por parte dos moderadores. 
-Curiosamente, ao final do período imperial, Kamchatskiy estava mais desenvolvida do que Mitterfürt, 
-contrastando com o motivo original da independência.
+O Império de Waydines chegou ao fim com a dissolução do [Fly SMP](Fly%20SMP) no dia 24 de fevereiro 
+de 2021, do qual o país fazia parte. O encerramento do servidor ocorreu devido a denúncias de banimentos 
+injustos por parte dos moderadores. Curiosamente, ao final do período imperial, Kamchatskiy estava 
+mais desenvolvida do que Mitterfürt, contrastando com o motivo original da independência.
 
 ## Primeira República
 
@@ -141,65 +141,127 @@ tendo Cupertino como presidente e Don Ravi como vice-presidente. Uma primeira el
 planejada, mas nunca chegou a ser realizada. Ademais, neste período, Jobje e Wolfi saíram de Waydines
 e não participaram de nenhum outro servidor.
 
-O evento mais relevante dessa fase foi a guerra entre a Confederação de Crusoé, nome adotado por 
-Waydines durante o [EDG SMP](EDG%20SMP), e os [Faccistas](Faccismo) (não confundir com fascistas). 
+O evento mais relevante dessa fase foi a guerra entre a Confederação de Crusoé &mdash; nome do país 
+criado por Don Ravi que serviu como uma “máscara” para Waydines, em um ambiente onde não podiam 
+existir mais de dois países oficiais &mdash; e os [Faccistas](Faccismo) (não confundir com fascistas). 
 Durante o conflito, Cupertino explorou uma brecha de segurança no servidor para obter acesso de 
 operador, garantindo a vitória de Waydines.
 
 Este período se estendeu do final do Fly SMP até o [Delta SMP 3](Delta%20SMP%203).
 
 ## Segunda República
-A Segunda República, também chamada de [Nova Waydines](Segunda%20República%20de%20Waydines), como ela
-se chamava oficialmente a partir das várias reformas políticas desenvolvidas por Cupertino e Don Ravi 
-que iniciaram este período. Waydines passou a ter um regime [semipresidencialista](https://pt.wikipedia.org/wiki/Semipresidencialismo) 
-(embora oficialmente se considerasse [parlamentarista](https://pt.wikipedia.org/wiki/Parlamentarismo))
-e sua primeira constituição, chamada de _Constssung_ e Mitterfürt passou a se chamar Mitterfurt. Esta 
-foi a época mais conturbada da história da nação, mas também quando houve uma explosão cultural e 
-identitária dentro da sociedade waydineense. 
+A Segunda República, também chamada de [Nova Waydines](Segunda%20República%20de%20Waydines), começou 
+com várias reformas políticas implementadas por Cupertino e Don Ravi. Waydines adotou um regime 
+[semipresidencialista](https://pt.wikipedia.org/wiki/Semipresidencialismo) (embora oficialmente se 
+considerasse [parlamentarista](https://pt.wikipedia.org/wiki/Parlamentarismo)) e promulgou sua 
+primeira constituição, chamada de _Constssung_. Além disso, Mitterfürt passou a se chamar Mitterfurt. 
+Esse período foi marcado por intensa agitação política, mas também por um florescimento cultural e 
+identitário dentro da sociedade waydineense.
 
-Pela primeira vez o país teve um sistema político realmente organizado, houve a criação do [Partido 
-Nacionalista de Waydines](Partido%20Nacionalista%20de%20Waydines), liderado por Cupertino e contando 
-com 5 filiados, e do [Partido Aceleracionista de Waydines](Partido%20Aceleracionista%20de%20Waydines), 
-de Don Ravi junto de 4 membros. Além das primeiras eleições da história, que fizeram Cupertino o
-primeiro-ministro e Ravi, presidente. Vale ressaltar que o sistema eleitoral da Segunda República era 
-extremamente incomum, o primeiro-ministro era eleito diretamente pelo povo, não pelo Parlamento, e os 
-assentos do Parlamento recebiam uma [eleição majoritária](https://pt.wikipedia.org/wiki/Sistema_majorit%C3%A1rio) 
-para cada.
+Pela primeira vez, o país teve um sistema político realmente organizado. Surgiram o [Partido Nacionalista 
+de Waydines](Partido%20Nacionalista%20de%20Waydines), liderado por Cupertino e com 5 filiados, e o 
+[Partido Aceleracionista de Waydines](Partido%20Aceleracionista%20de%20Waydines), de Don Ravi, com 4 membros. 
+As primeiras eleições foram realizadas, elegendo Cupertino como primeiro-ministro e Ravi como presidente. 
+O sistema eleitoral da Segunda República era incomum: o primeiro-ministro era eleito diretamente pelo 
+povo, e os assentos do Parlamento eram preenchidos por [eleição majoritária](https://pt.wikipedia.org/wiki/Sistema_majorit%C3%A1rio) 
 
-Mais adiante, houveram eleições para o Parlamento, com todos os assentos sendo entregues ao Partido 
-Nacionalista.
+Mais tarde, as eleições parlamentares deram todos os assentos ao Partido Nacionalista.
 
-Foi também neste tempo que a [igreja madeísta](Madeísmo) primitiva nasceu, devido a acontecimentos paralelos entre
-as pessoas que jogaram no EDG SMP. Devido a grande parte de Waydines ter forte relação com o EDG, a
-religião cresceu rapidamente entre as pessoas, alcançando até mesmo um pico de 100% da população.
+Foi também nesse tempo que a [igreja madeísta](Madeísmo) primitiva nasceu, por conta de acontecimentos 
+paralelos entre as pessoas que jogaram no EDG SMP. Devido à forte relação de Waydines com o EDG, a 
+religião cresceu rapidamente e, em seu auge, chegou a representar 100% da população.
 
+### Crise de 40hzRay
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741825533/processo1pagina_owmol8.webp" height="20rem" description="Primeira Página do Processo Criminal contra 40hzRay"/>
 
-No início da Nova República, houve caos, um cidadão, [40hzRay](40hzRay), começou a causar danos à 
-nação e a seus habitantes repetidamente. Nesta situação, a assembleia constituinte correu para 
-promulgar a constituição e uma Suprema Corte foi formada, tendo [Shazy](Shazy) como ministro.
+No início da Nova República, houve caos. Um cidadão, [40hzRay](40hzRay), começou a causar danos à 
+nação e a seus habitantes repetidamente. Em resposta, a assembleia constituinte correu para promulgar 
+a constituição, e uma Suprema Corte foi formada, com [Shazy](Shazy) como ministro.
 
-Foi iniciado um julgamento extraordinário, levando em consideração ações feitas antes da constituição. 
-Ele fez ataques aos agora inexistentes distritos de Hasgard e Hillpath e subdistrito de Santuário. 
-Também machucou a integridade do distrito de Mitterfurt, foi notório principalmente pelos seguintes
-crimes: Sabotou a farm de endermans do servidor; Furtos e completa destruição do subdistrito de Santuário;
-Furtos a Hillpath; Assassinato de pessoas e animais de estimação; Invasão de propriedade privada e 
-propriedade estatal de acesso restrito; Furto do ovo do dragão.
+Um julgamento extraordinário foi iniciado, considerando ações anteriores à constituição. Ele foi 
+acusado de vários crimes, incluindo:
 
-Os eventos, ocorridos durante o [Delta SMP 4](Delta%20SMP%204), terminaram com a prisão de 40hzRay por
-duas semanas, após um longo julgamento. Ironicamente, o servidor terminou antes de que o réu pudesse 
-ser propriamente preso.
+- Sabotagem da farm de endermans do servidor;
+- Furtos e destruição do subdistrito de Santuário;
+- Furtos em Hillpath;
+- Assassinato de jogadores e animais de estimação;
+- Invasão de propriedades privadas e estatais;
+- Furto do ovo do dragão.
 
+Os eventos ocorreram durante o [Delta SMP 4](Delta%20SMP%204) e resultaram na condenação de 40hzRay 
+a duas semanas de prisão, após um julgamento que durou inúmeras fases e sessões. No entanto, o 
+servidor terminou antes que ele pudesse cumprir a pena.
 
+### Guerra Nordenbürgen ✕ Waydines
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741867174/dd80e8ae-b6df-4164-99c3-cca1433011f0.png" description="Lista de Players durante a Guerra" />
+
+No [Delta SMP 5](Delta%20SMP%205), o primeiro servidor a contar com vários países, Waydines viveu 
+uma guerra essencial para o fortalecimento de sua identidade nacional. Na época, o país tinha cinco 
+distritos (Nova Hillpath, Mitterfurt, Kamchatskiy, Hasgard e um distrito provisório) e atingiu seu 
+auge populacional. A guerra contra [Nordenbürgen](Nordenbürgen), liderada pelo regime fascista de 
+[etc_pt](etc_pt), começou após Waydines oferecer asilo a [Portugueskiy](Portugueskiy), um perseguido 
+político do país.
+
+A guerra durou cerca de oito horas e envolveu quase toda Waydines em um chat de voz durante as batalhas.
+A vitória de Waydines aumentou significativamente o moral e o sentimento de identidade nacional. Após 
+a guerra, no [Delta SMP 5.1](Delta%20SMP%5.1), Cupertino nomeou Portugueskiy como rei de Nordenbürgen, 
+formando uma aliança que persiste até hoje entre Waydines e o [Xogunato Ryūsei](Xogunato%20Ryūsei), 
+sucessor de Norden.
+
+Nesse período, o Partido Aceleracionista foi renomeado para [Partido Socialista de 
+Waydines](Partido%20Socialista%20de%20Waydines) e começou uma disputa mais acirrada com o Partido 
+Nacionalista. A crescente instabilidade política foi explorada por [Emmeria](Emmeria), um país com o 
+qual Waydines estava em Guerra Fria.
+
+### Intifadas Waydineenses e queda da Segunda República
+Durante as tensões políticas, surgiram as [Intifadas waydineenses](Intifadas%20de%20Waydines), nas 
+quais moradores de Mitterfurt, apoiadores do Partido Nacionalista, e de Kamchatskiy, grande eleitorado 
+do Partido Socialista, passaram a se hostilizar mutuamente. O crescente conflito levou à renúncia de 
+Cupertino, sendo Shazy, único parlamentar socialista, nomeado primeiro-ministro.
+
+Contudo, Shazy não era ativo politicamente, delegando grande parte do governo a Don Ravi. Cupertino, 
+percebendo que Don Ravi estava concentrando poderes devido à inatividade de Shazy, entrou com um 
+processo na Suprema Corte. O ministro da época, Anni, aliado ao Partido Nacionalista, decidiu politicamente 
+e destituiu Don Ravi sem direito a defesa.
+
+Pouco depois, novas eleições foram realizadas, resultando na vitória de Cupertino como 
+primeiro-ministro e Shazy como presidente.
 
 ## Guerra Civil de Waydines
+Após as eleições, a insatisfação com a prisão de Don Ravi levou à eclosão de uma revolução em Kamchatskiy, 
+apoiada externamente por Emmeria. No dia seguinte à eleição, tropas de Emmeria e do Partido Revolucionário 
+de Kamchatskiy cercaram Mitterfurt. Cupertino, da janela de seu apartamento, capitulou, e a cidade 
+foi completamente destruída pelos revolucionários. Esse evento marcou a queda de Waydines.
 
 ## Governo Provisório
-Ao fim da Guerra Civil de Waydines, o país entrou em um estado provisório ausente de líderes políticos,
-sem brasão e com a bandeira tricolor também sem brasão, pela primeira vez, a qual o país mantém até hoje.
-Isso durou por cerca de uma semana, até que a Terceira República foi proclamada.
+Após a Guerra Civil de Waydines, o país entrou em um estado provisório sem líderes políticos, adotando 
+uma bandeira tricolor sem brasão, a qual país usa até hoje. Esse período durou cerca de uma semana, 
+até a proclamação da Terceira República.
 
 ## Terceira República (Dias de Hoje)
+A Terceira República foi proclamada por debaixo dos panos durante o [Don SMP 1](Don%20SMP%201), o qual
+Waydines não participou diretamente, mas teve certo envolvimento na derrubada de Kamchatskiy durante 
+o [Don SMP 2](Don%20SMP%202). Waydines também se tornou uma república parlamentarista verdadeira a partir 
+da formulação aqui de uma nova constituição.
+
+Após a queda de Kamchatskiy, o país foi tornado em um distrito de Waydines novamente, dentro dos 
+termos do acordo de paz. A Terceira República teve sua primeira eleição entre os [Social Democratas
+](Social%20Democratas%20(Waydines)) (`SD`), sucessor do Partido Nacionalista, e o [Partido Democrático 
+Popular](Partido%20Democrático%20Popular) (`PDP`), sucessor do Partido Socialista. Os resultados foram 
+3 assentos ao PDP e 4 ao SD. No dia seguinte, Kamchatskiy declarou independência pacificamente, formando 
+Frigustell.
+
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741872003/elisiamapa_ecwy3g.png" height="20rem" description="Mapa do continente de Elísia" />
+
+Bem mais no futuro, durante o [Cup SMP](Cup%20SMP), surgiu a etnia elisiana, resultado do intercâmbio 
+cultural entre Waydines, o Império de Nordenbürgen e o [Reino Teocrático de Osmaria](Osmaria), todos 
+localizados no continente de Elísia. O crescimento dessa identidade levou à criação da [União 
+Elisiana](União%20Elisiana), uma confederação que garantiu um desenvolvimento pacífico e econômico 
+aos três países, apesar de longos debates sobre sua estrutura e a possibilidade de uma moeda única.
+
+Atualmente, Waydines é um exemplo de democracia plena e pacífica, sendo o país mais diplomático do 
+mundo, mantendo diplomatas com todos os países, exceto Emmeria; o único a ter uma constituição 
+completa e a única onde o cargo máximo do país é eleito democraticamente.
 
 # Política
 
