Finish portuguese article for Waydines

--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -7,9 +7,9 @@ short_description: "País em Elísia"
 
 **Waydines** (/we&#618;da&#618;nɛs/), oficialmente a **República Parlamentarista de Waydines**, é um
 país [elisiano](Elísia) e [brazilburguês](Brazilburg) (o que o faz nação prima de [Frigustell](Frigustell)). 
-Composta por dois distritos, a capital planejada [Mitterfurt](Mitterfurt) e a cidade de [Gremont](Gremont), 
-possui no total 13 cidadãos registrados oficialmente (2024). Adicionalmente, é um país-membro e fundador 
-da [União Elisiana](União%20Elisiana).
+Composta por dois distritos &mdash; a capital planejada [Mitterfurt](Mitterfurt) e a cidade de [Gremont](Gremont) 
+&mdash; e pelo subdistrito especial de [Kibosaki](Kibosaki), possui no total 13 cidadãos registrados 
+oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União Elisiana](União%20Elisiana).
 
 <QuickFacts title="República Parlamentarista de Waydines">
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
@@ -251,7 +251,7 @@ Popular](Partido%20Democrático%20Popular) (`PDP`), sucessor do Partido Socialis
 3 assentos ao PDP e 4 ao SD. No dia seguinte, Kamchatskiy declarou independência pacificamente, formando 
 Frigustell.
 
-<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741872003/elisiamapa_ecwy3g.png" height="20rem" description="Mapa do continente de Elísia" />
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741872003/elisiamapa_ecwy3g.png" height="20rem" description="Mapa do continente de Elísia durante o Cup SMP, antes da compra do território oeste de Norden por Waydines" />
 
 Bem mais no futuro, durante o [Cup SMP](Cup%20SMP), surgiu a etnia elisiana, resultado do intercâmbio 
 cultural entre Waydines, o Império de Nordenbürgen e o [Reino Teocrático de Osmaria](Osmaria), todos 
@@ -261,8 +261,67 @@ aos três países, apesar de longos debates sobre sua estrutura e a possibilidad
 
 Atualmente, Waydines é um exemplo de democracia plena e pacífica, sendo o país mais diplomático do 
 mundo, mantendo diplomatas com todos os países, exceto Emmeria; o único a ter uma constituição 
-completa e a única onde o cargo máximo do país é eleito democraticamente.
+completa e a única nação onde o cargo máximo é eleito democraticamente.
 
 # Política
+## Estrutura
+O país conta com um sistema parlamentarista sem presidente, o primeiro-ministro exerce completo poder
+do executivo, nomeando ministérios e secretários, e se responsabilizando por decretos, medidas provisórias
+e do processo de ratificação de leis, tendo o direito constitucional do veto completo ou parcial de 
+atos parlamentares, os quais, para entrarem em vigor, precisam obrigatoriamente da assinatura do ministro.
+
+Ainda sim, o Parlamento tem o direito de derrubar vetos, decretos e medidas provisórias do primeiro-ministro,
+sendo que, no último, o Parlamento só pode opinar após uma semana da medida em vigor. Nenhuma lei pode
+ser criada sem a maioria, no mínimo relativa, dos parlamentares.
+
+Existe também o cargo de Conselheiro Distrital, definido na [Devolução](https://pt.wikipedia.org/wiki/Devolu%C3%A7%C3%A3o) 
+de Waydines. Há um para cada distrito, exceto a capital, e serve para conduzir decretos localizados
+e aconselhar ações parlamentares direcionadas ao seu respectivo distrito. Segundo a constituição nacional,
+eles ainda que relativamente autônomos, devem seguir qualquer ordem ou imposição dos ministros e Parlamento.
+
+## Democracia
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741874088/socdemgu_gsphaz.svg" height="8rem" description="Logotipo do Partido Social Democratas"/>
+
+Atualmente o país conta com somente um partido, os Social Democratas, mas, com o recente crescimento
+populacional de Waydines, provavelmente terá em breve um segundo partido, que, quando formado, iniciará
+novas eleições nacionais, que estão pendentes desde 6 de julho de 2024.
+
+As eleições são conduzidas pela [Corte Superior Eleitoral](Corte%20Superior%20Eleitoral%20(Waydines)), 
+que exerce poder executivo e judiciário sobre as matérias eleitorais. Eleições ao Parlamento são feitas 
+com o sistema de [voto único transferível](https://pt.wikipedia.org/wiki/Voto_%C3%BAnico_transfer%C3%ADvel) 
+em [lista fechada](https://pt.wikipedia.org/wiki/Lista_fechada); enquanto as eleições para Conselheiro 
+Distrital são em [voto preferencial](https://pt.wikipedia.org/wiki/Voto_preferencial) e permitem 
+[candidatos independentes](https://pt.wikipedia.org/wiki/Pol%C3%ADtico_sem_partido).
 
 # Sociedade
+## Cultura e Identidade
+A identidade nacional de Waydines é profundamente enraizada em sua história e tradições. O sol, brasão 
+do país, representa não apenas luz e esperança, mas também a força e continuidade da nação. É forte 
+o sentimento popular de conexão entre a nação e o sol.
+
+A cultura waydineense tem forte influência do Madeísmo, religião predominante que molda muitas das 
+tradições do país. No entanto, além das festividades religiosas como a Festa da Meia-Noite, duas 
+datas são especialmente comemoradas por toda a população: o Dia da Independência, que marca a soberania 
+do país, e os dias de eleição, momentos em que o povo reafirma seu compromisso com a democracia.
+
+Na arquitetura, Waydines apresenta uma fusão única entre o barroco neerlandês e o modernismo, criando 
+um ambiente urbano que mescla a grandiosidade ornamental com a funcionalidade contemporânea. Essa 
+combinação reflete o espírito do país: um equilíbrio entre tradição e inovação.
+
+Os waydineenses são conhecidos por sua cordialidade e timidez, características que influenciam sua 
+forma de socialização e participação política. Embora reservados, valorizam o diálogo e a diplomacia,
+características que fazem de Waydines um dos países mais pacíficos do cenário global.
+
+Fato adicional é que o povo de Waydines tem a tendência a construir suas cidades em lugares frios, 
+fazendo provavelmente em memória à cidade original de Mitterfurt, construída em uma montanha.
+Tradicionalmente, portanto, a população usa vestimentas de pele de cabra.
+
+## Religião
+O Madeísmo, compondo \~83% da população (censo conduzido em 2023), é importantíssimo para a sociedade
+waydineense, sendo ela altamente devota à religião. A influência dessa religião sobre o país é motivo
+até mesmo da criação do subdistrito de Kibosaki, que é controlado diretamente pela Igreja da Fé Renovada 
+em Made, e tem seu território definido como “todos os presbitérios e o templo central da cidade de 
+Mitterfurt” (texto da Devolução de Waydines).
+
+Os dias onde há tradições relacionadas à religião costumam muitas vezes serem tratados como feriados,
+embora não sejam oficialmente de acordo com a lei.
